# tyr

./: .gitignore  AGENTS.md  Apptainer  CMakeLists.txt  Config.cmake.in  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: apptainer.yml  ci_ctest.yml  ci_pytest.yml  ci_release.yml  release.yml  testpypi.yml
cmake/: configure_boost.cmake  tyr_native_dependencies.cmake
cmake/install/: fix_macos_runtime_paths.cmake  fix_unix_runtime_paths.cmake
dependencies/: CMakeLists.txt
dependencies/gtl/: CMakeLists.txt
dependencies/loki/: CMakeLists.txt
dependencies/nanobind/: CMakeLists.txt
docs/: BUILD.md  PDDL_SUPPORT.md
docs/agent-goals/: FEATURE_TMPL.md  lifted-numeric-ff.md
exe/: astar_eager.cpp  gbfs_lazy.cpp
experiments/: parser_search.py  suite.py  suite_test.py
experiments/astar_eager/: 2026-4-3-blind.py
experiments/astar_eager/2026-4-30/: blind-numeric.py  ipc2023-debug.py  ipc2023-release.py  minepddl-debug.py  minepddl-release.py
experiments/gbfs_lazy/: 2026-3-2-time-distribution.py  2026-3-2-time-speedup-vs-skew.py
experiments/gbfs_lazy/2026-4-30/: 2026-1-8-gbfs_lazy-ff-numeric.py  blind-ff-goal-count-numeric.py  ipc2023-debug.py  ipc2023-release.py  minepddl-debug.py  minepddl-release.py
include/tyr/analysis/: analysis.hpp  declarations.hpp  domains.hpp  formatter.hpp  listeners.hpp  stratification.hpp
include/tyr/buffer/: indexed_hash_set.hpp  segmented_buffer.hpp
include/tyr/common/: array.hpp  bit.hpp  bit_packed_array_pool.hpp  bit_packed_array_set.hpp  bits.hpp  block_array_pool.hpp  block_array_set.hpp  canonicalization.hpp  closed_interval.hpp  comparators.hpp  config.hpp  declarations.hpp  dynamic_bitset.hpp  equal_to.hpp  formatter.hpp  hash.hpp  index_mixins.hpp  indexed_hash_set.hpp  json_loader.hpp  macros.hpp  onetbb.hpp  raw_array_pool.hpp  raw_array_set.hpp  raw_vector_pool.hpp  raw_vector_set.hpp  segmented_array_pool.hpp  segmented_vector.hpp  types.hpp  variant.hpp  vector.hpp
include/tyr/datalog/: applicability.hpp  applicability.ipp  assignment_sets.hpp  assignment_sets_accessor.hpp  assignment_sets_accessor_concept.hpp  bottom_up.hpp  care_accessor.hpp  care_accessor_concept.hpp  consistency_graph.hpp  declarations.hpp  delta_kpkc.hpp  delta_kpkc_graph.hpp  fact_sets.hpp  fact_sets_accessor.hpp  fact_sets_accessor_concept.hpp  formatter.hpp  program_context.hpp  rule_scheduler.hpp
include/tyr/formalism/: arithmetic_operator_utils.hpp  basic_relation_repository.hpp  basic_symbol_repository.hpp  binding_data.hpp  binding_index.hpp  binding_view.hpp  boolean_operator_utils.hpp  declarations.hpp  formalism.hpp  formatter.hpp  relation_repository.hpp  repository.hpp  symbol_repository.hpp
include/tyr/planning/: action_executor.hpp  applicability.hpp  applicability.ipp  applicability_lifted.hpp  applicability_lifted.ipp  applicability_lifted_decl.hpp  axiom_evaluator.hpp  declarations.hpp  factory.hpp  formatter.hpp  ground_task.hpp  heuristic.hpp  lifted_task.hpp  plan.hpp  planning.hpp  search_space.hpp  state_accessor.hpp  state_data.hpp  state_iterators.hpp  state_repository.hpp  state_storage.hpp  successor_generator.hpp  task.hpp  task_utils.hpp
profiling/: README.md  compare.py  report.py  runner.py  schema.py
profiling/planning/lifted_task/: CMakeLists.txt  successor_generator.cpp  successor_generator.json
python/: pytyr_build_backend.py
python/examples/: astar_eager.py
python/examples/planning/: astar_eager.py  gbfs_lazy.py
python/src/: CMakeLists.txt  init_declarations.hpp  module.cpp  pytyr.cpp  tyrConfig.cmake
python/src/pytyr/: CMakeLists.txt  __init__.py  __init__.pyi  common.cpp  common.hpp  common.py  init_declarations.hpp  module.cpp  module.hpp
python/src/pytyr.egg-info/: PKG-INFO  SOURCES.txt
python/src/pytyr/common/: __init__.py  module.cpp  module.hpp
python/src/pytyr/formalism/: formalism.cpp  module.cpp  module.hpp  planning.cpp  planning.hpp  planning.py
python/src/pytyr/formalism/planning/: __init__.py  bindings.cpp  bindings.hpp  datas.cpp  datas.hpp  domains.cpp  domains.hpp  indices.cpp  indices.hpp  invariants.cpp  invariants.hpp  module.hpp  mutable.cpp  mutable.hpp  views.cpp  views.hpp
python/src/pytyr/planning/: __init__.py  astar_eager.hpp  bindings.cpp  bindings.hpp  brfs.hpp  gbfs_lazy.hpp  iw.hpp  module.cpp  module.hpp  planning.cpp  planning.hpp  siw.hpp
python/src/pytyr/planning/ground/: __init__.py  astar_eager.py  gbfs_lazy.py  module.cpp  module.hpp
python/src/pytyr/planning/ground/astar_eager/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/ground/brfs/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/ground/gbfs_lazy/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/ground/iw/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/ground/siw/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/: __init__.py  astar_eager.py  gbfs_lazy.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/astar_eager/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/brfs/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/gbfs_lazy/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/iw/: __init__.py  module.cpp  module.hpp
python/src/pytyr/planning/lifted/siw/: __init__.py  module.cpp  module.hpp
python/src/utils/: string.hpp
python/tests/downstream/: test_python_import.py
src/: CMakeLists.txt
src/analysis/: listeners.cpp  program_domains.cpp  stratification.cpp  task_domains.cpp
src/datalog/: applicability.cpp  assignment_sets.cpp  bottom_up.cpp  consistency_graph.cpp  delta_kpkc.cpp  fact_set.cpp  formatter.cpp  rule_scheduler.cpp
src/datalog/policies/: annotation.cpp  numeric_support.cpp  termination.cpp
src/datalog/workspaces/: facts.cpp  program.cpp  rule.cpp
src/planning/: action_executor.cpp  applicability.cpp  applicability_lifted.cpp  formatter.cpp  ground_task.cpp  lifted_task.cpp  loki_to_tyr.cpp  loki_to_tyr.hpp  task_utils.cpp
tests/unit/: CMakeLists.txt
(+302 files in other folders)
