[build-system]
requires = [
    "scikit-build-core>=0.10",
]
build-backend = "pytyr_build_backend"
backend-path = ["python"]

[project]
name = "pytyr"
version = "0.0.9"
description = "Tyr datalog/planning library"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = []

[project.urls]
Homepage = "https://github.com/drexlerd/tyr"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.scikit-build]
build.targets = ["pytyr_wheel"]
cmake.build-type = "Release"
install.components = ["pytyr"]
wheel.packages = []

[tool.scikit-build.sdist]
include = ["dependencies/**"]
exclude = [
    "build*/**",
    "dependencies-build/**",
    "dependencies-install/**",
    "python/src/pytyr.egg-info/**",
    "*.egg-info/**",
    "profiling-results/**",
]

[tool.scikit-build.cmake.define]
BUILD_PYTYR = true
BUILD_TESTS = false
BUILD_EXECUTABLES = false
BUILD_PROFILING = false
TYR_USE_LLD = false
TYR_BUILD_SHARED = true
TYR_LINK_STATIC_DEPENDENCIES = false
CMAKE_INSTALL_LIBDIR = "lib"
TYR_HEADER_INSTANTIATION = {env = "TYR_HEADER_INSTANTIATION", default = "OFF"}

[tool.cibuildwheel]
container-engine = "docker"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
